--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   font-family: Quicksand;
   src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
+@font-face {
+  font-family: Montserrat;
+  src: url(./Fonts/Montserrat-VariableFont_wght.ttf);
+}
 html {
   font-size: 10px;
 }
@@ -17,6 +21,162 @@ html {
 body {
   margin: 0;
   padding: 0;
+}
+
+.elem1__text > p, .description__square > p {
+  margin: 0;
+  padding: 0;
+}
+
+.main .main__bg {
+  width: 100vw;
+  background: url(./img/main/bg.png) 0 0/100% 100% no-repeat;
+}
+.main .main__nav {
+  padding: 56px 100px 125px 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.main .main__nav .nav__elem1 {
+  display: flex;
+  align-items: center;
+}
+.main .main__nav .nav__elem1 .elem1__imgContainer {
+  display: inline-block;
+  height: 100%;
+}
+.main .main__nav .nav__elem1 .elem1__imgContainer .elem1__img {
+  width: 105%;
+  height: 105%;
+}
+.main .main__nav .nav__elem1 .elem1__text .elem1__text1 {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.6rem;
+  font-size: 2rem;
+  line-height: 20px;
+  color: #0897AB;
+  padding-left: 10px;
+  padding-top: 5px;
+  text-transform: uppercase;
+}
+.main .main__nav .nav__elem1 .elem1__text .elem1__text2 {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.6rem;
+  font-size: 2rem;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding-left: 34px;
+  text-transform: uppercase;
+}
+.main .main__nav .nav__elem2 {
+  display: flex;
+  align-items: center;
+  gap: 53px;
+}
+.main .main__nav .nav__elem2 .elem2__searchContainer {
+  background: rgba(40, 40, 52, 0.01);
+  border: 2px solid #0897AB;
+  box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.52);
+  border-radius: 23px;
+  border-radius: 75px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 176px;
+  padding-right: 225px;
+  display: flex;
+  justify-content: flex-start;
+  background: url(./img/main/magnifier.svg) 29px 18px no-repeat;
+}
+.main .main__nav .nav__elem2 .elem2__searchContainer .elem2__search {
+  margin-left: 64px;
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.58);
+}
+.main .main__nav .nav__elem2 .elem2__bin {
+  background: url(./img/main/bin.svg) no-repeat;
+  width: 47px;
+  height: 44px;
+  text-align: center;
+  position: relative;
+}
+.main .main__nav .nav__elem2 .elem2__bin .elem2__text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  background-color: #0897AB;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 27px;
+  left: 25px;
+}
+.main .main__description {
+  padding: 100px 67px 10% 200px;
+  margin: 0 680px 0 0;
+  padding-left: 10%;
+  position: relative;
+  z-index: 0;
+  bottom: 100px;
+  right: 30px;
+}
+.main .main__description .description__square .description__imgContainer {
+  position: absolute;
+  z-index: -1;
+  margin: -100px 0 0 -75px;
+}
+.main .main__description .description__square .description__imgContainer .description__img {
+  width: 800px;
+}
+.main .main__description .description__square .description__buttonContainer {
+  display: inline-block;
+}
+.main .main__description .description__square .description__h1 {
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4.8rem;
+  line-height: 60px;
+  color: #FFFFFF;
+  width: 500px;
+}
+.main .main__description .description__square .description__text {
+  width: 650px;
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 157%;
+  letter-spacing: 0.07em;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+.main .main__description .description__square .description__text::first-letter {
+  padding-left: 15px;
+}
+.main .main__description .description__square .description__button {
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 25px;
+  color: #FFFFFF;
+  padding: 20px 62px;
+  background: url(./img/main/Subtract.svg) 0 0/100% 100% no-repeat;
+}
+.main .main__description .description__square .description__link {
+  text-decoration: none;
 }
 
 .recommendation {
@@ -30,90 +190,128 @@ body {
   height: auto;
   display: flex;
 }
+
 .HU-1-3__leftpanel {
   position: relative;
   width: 49vw;
+  width: 650px;
+  z-index: 0;
 }
+
 .HU-1-3__leftpanel .leftpanel__img1 {
-  width: 10rem;
+  width: 125px;
   position: absolute;
   left: 35%;
-  top: 30%;
+  top: 20%;
 }
+
 .HU-1-3__leftpanel .leftpanel__img2 {
-  width: 10rem;
+  width: 125px;
   position: absolute;
-  left: 50%;
-  top: 30%;
+  left: 53.847%;
+  height: 403px;
+  top: 109px;
 }
+
 .HU-1-3__leftpanel .leftpanel__backimg {
-  left: 0rem;
-  top: 99.3rem;
-  width: 60rem;
-}
-.HU-1-3__leftpanel h1 {
-  font-family: "Dhurjati";
   position: absolute;
-  left: 24.5%;
-  top: 6%;
+  z-index: -1;
+  left: 1.5rem;
+  top: 1rem;
+  width: 58rem;
+}
+
+.leftpanel__content {
+  left: 0;
+  top: 0%;
+  position: relative;
+  width: 65rem;
+  height: 65rem;
+}
+
+.HU-1-3__leftpanel h1 {
+  font-family: "Dhurjati", sans-serif;
+  position: absolute;
+  left: 27%;
+  top: 7.5%;
+  top: 1%;
+  left: 22%;
   color: white;
   font-size: 5.6rem;
+  font-size: 9.6rem;
+  font-weight: normal;
   line-height: 16rem;
   letter-spacing: 1.312rem;
   text-transform: uppercase;
   width: 20vw;
 }
+
 .HU-1-3__rightpanel {
   width: 50vw;
 }
+
 .HU-1-3__rightpanel h2 {
-  font-family: 'Doppio One', sans-serif;
-  width: 45vw;
-  font-size: 4.2rem;
-  line-height: 6rem;
+  font-family: "Doppio One", sans-serif;
+  font-size: 4.8rem;
+  font-weight: normal;
   color: white;
+  font-weight: 400;
   margin-top: 15rem;
 }
+
 .HU-1-3__rightpanel h3 {
   font-family: "Doppio One";
   font-size: 2.4rem;
+  font-size: 3.2rem;
   line-height: 4rem;
   color: white;
+  font-weight: normal;
 }
+
 .HU-1-3__rightpanel span {
   font-family: "Doppio One";
   color: #D8A4B6;
   font-size: 3rem;
+  font-size: 3.2rem;
 }
+
 .HU-1-3__rightpanel p {
   font-family: "Doppio One";
-  width: 50vw;
-  color: rgba(255, 255, 255, 0.54);
-  font-size: 1.6rem;
+  font-size: 2rem;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.57);
+  width: 90%;
 }
+
 .HU-1-3 .rightpanel__link {
   position: relative;
   display: flex;
   flex-direction: column;
 }
+
 .HU-1-3 .rightpanel__link a {
   font-family: "Dhurjati";
-  font-size: 2.4rem;
-  line-height: 6.7rem;
-  text-decoration: none;
+  font-weight: 400;
   color: white;
+  font-size: 3.6rem;
+  line-height: 6.7rem;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
 }
+
 .HU-1-3 .rightpanel__link hr {
   width: 10rem;
   position: absolute;
   left: 0;
   bottom: 0;
-}/*# sourceMappingURL=style.css.map */
-.HU-1-2, .HU-1-4{
+} 
+.HU-1-2, .HU-1-4 {
   padding-top: 65px;
 }
-.HU-1-2__h2{
-  font-family: 'Doppio One', sans-serif;
+
+.HU-1-2__h2 {
+  font-family: "Doppio One", sans-serif;
   font-size: 4.8rem;
   color: white;
   text-align: center;
@@ -121,45 +319,53 @@ body {
   position: relative;
   font-weight: 400;
 }
-.HU-1-2__product, .HU-1-4__product{
+
+.HU-1-2__product, .HU-1-4__product {
   display: flex;
   padding: 5%;
 }
-.product__info{
+
+.product__info {
   width: 50%;
 }
-.info__h2{
-  font-family: 'Doppio One', sans-serif;
+
+.info__h2 {
+  font-family: "Doppio One", sans-serif;
   font-size: 4.8rem;
   color: white;
   font-weight: 400;
   margin: 0;
   margin-bottom: 30px;
 }
-.info__starting{
+
+.info__starting {
   color: white;
   margin: 0;
   margin-right: 10%;
 }
-.info__price{
+
+.info__price {
   color: #ddafbf;
   margin: 0;
 }
-.info__prices{
+
+.info__prices {
   display: flex;
-  font-family: 'Doppio One';
+  font-family: "Doppio One";
   font-size: 3.2rem;
   font-weight: 400;
 }
-.info__lorum{
-  font-family: 'Doppio One';
+
+.info__lorum {
+  font-family: "Doppio One";
   font-size: 20px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.57);
   width: 90%;
 }
-.info__buy{
-  font-family: 'Dhurjati';
+
+.info__buy {
+  font-family: "Dhurjati";
   font-weight: 400;
   color: white;
   font-size: 3.6rem;
@@ -169,6 +375,319 @@ body {
   margin: 0;
   text-decoration: none;
 }
-.product__img img{
+
+.product__img img {
   width: 590px;
+}
+
+.shop__select > div {
+  border: 0.5vw solid #3C3B4B;
+  border-radius: 0.5vw;
+  width: 40vw;
+  height: 25vw;
+  overflow: hidden;
+}
+
+.shop {
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: "Doppio One";
+  font-weight: 400;
+  padding-bottom: 9vw;
+}
+.shop h3 {
+  margin: 0 auto;
+  padding: 3vw 0;
+  text-align: center;
+  color: #fff;
+  font-size: 3.5vw;
+  font-weight: 300;
+}
+.shop__mouse-price, .shop__pad-price, .shop__headphones-price, .shop__keyboard-price {
+  margin-top: 2vw;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 3vw;
+}
+.shop__mouse-price p, .shop__pad-price p, .shop__headphones-price p, .shop__keyboard-price p {
+  margin-bottom: 0.5vw;
+  font-size: 1.2vw;
+  font-weight: normal;
+}
+.shop__mouse-price span, .shop__pad-price span, .shop__headphones-price span, .shop__keyboard-price span {
+  color: #0897AB;
+  font-size: 1.5vw;
+}
+.shop__mouse-text, .shop__pad-text, .shop__headphones-text, .shop__keyboard-text {
+  font-family: "Montserrat";
+  color: #2D2D39;
+  font-size: 9.5vw;
+  font-weight: 800;
+  text-transform: uppercase;
+  position: relative;
+  left: -5%;
+  margin-top: 2vw;
+}
+.shop__mouse-desc, .shop__pad-desc, .shop__headphones-desc, .shop__keyboard-desc {
+  font-size: 1.5vw;
+  position: relative;
+  left: 8%;
+  bottom: 50%;
+  font-weight: normal;
+}
+.shop__mouse-btn, .shop__keyboard-btn, .shop__pad-btn, .shop__headphones-btn {
+  position: sticky;
+  bottom: 5%;
+  left: 5%;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: normal;
+}
+.shop__mouse-btn a, .shop__keyboard-btn a, .shop__pad-btn a, .shop__headphones-btn a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5vw;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: normal;
+}
+.shop__mouse-btn div, .shop__keyboard-btn div, .shop__pad-btn div, .shop__headphones-btn div {
+  background-color: #0897AB;
+  -webkit-clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+          clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+  width: 16vw;
+  height: 4vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 100;
+}
+.shop__keyboard, .shop__pad {
+  margin-left: 1.5vw;
+}
+.shop__mouse, .shop__headphones {
+  margin-right: 1.5vw;
+}
+.shop__headphones, .shop__keyboard {
+  margin-top: 3.5vw;
+}
+.shop img {
+  width: 16vw;
+  position: sticky;
+  left: 60%;
+  bottom: 60%;
+}
+.shop__mouse > img {
+  width: 23vw;
+  left: 45%;
+}
+.shop__headphones > img {
+  width: 19vw;
+  left: 54%;
+}
+.shop__pad > img {
+  width: 21vw;
+  left: 49%;
+}
+.shop__select {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}/*# sourceMappingURL=style.css.map */
+.HU-2{
+  background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+  border: 1px solid rgb(26, 28, 75, 0%);
+}
+.HU-2-4__carpetwrapper{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 15.5rem;
+  margin-left: 15.5rem;
+  margin-bottom: 8rem;
+}
+.HU-2-4__carpets{
+  margin-top: 5.5rem;
+  width: 42.6rem;
+  padding: 6.5rem 2.2rem 6.5rem;
+  box-shadow: 0 0 0.5rem 0.5rem #00000040;
+}
+.HU-2-4__h2{
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: white;
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  width: 42rem;
+  margin: 0 1.2rem;
+
+}
+.HU-2-4__starting{
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: white;
+  font-size: 3.2rem;
+  line-height: 4rem;
+  display: flex;
+  justify-content: space-between;
+  width: 38rem;
+}
+.HU-2-4__starting span{
+  color: #0897AB;
+  text-align: right;
+}
+.HU-2-4__carpets img{
+  width: 368px;
+  margin-left: 2rem;
+  margin-top: 5rem;
+}
+.HU-2-4__lorem{
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: rgba(255, 255, 255, 0.33);
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+.HU-2-4__buy{
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 6.6rem;
+  color: white;
+  border-bottom: solid 0.1rem white;
+  text-decoration: none;
+}
+.HU-2-2{
+  margin-left: 13rem;
+  height: 16rem;
+}
+.HU-2-2__ul{
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.75rem;
+  width: 17rem;
+  margin-right: 2.4rem;
+}
+.HU-2-2__ul p{
+  margin: 0 0 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+.li__first{
+  justify-content: space-between;
+  display: flex;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+}
+.li__first img{
+  height: 2.5rem;
+  width: 1.5rem;
+  vertical-align: sub;
+}
+.li__active, .li__unactive{
+  display: flex;
+  width: 85%;
+  justify-content: space-between;
+}
+.li__active p, .li__unactive p{
+  width: 11rem;
+}
+.li__active{
+  color: white;
+}
+.li__unactive{
+  color: rgba(255, 255, 255, 0.21);
+}
+.check__unactive{
+  background-color: rgba(255, 255, 255, 0.21);
+  width: 1.7rem;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+}
+.check__blue{
+  display: flex;
+  width: 1.7rem;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+  background-color: #0897AB;
+  justify-content: center;
+}
+.check__img{
+  text-align: center;
+  width: 1.3rem;
+}
+.HU-2-2__color{
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.75rem;
+  margin-right: 2.4rem;
+  width: 7rem;
+}
+.HU-2-2__color p{
+  margin: 0 0 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+.color__first{
+  justify-content: space-between;
+  display: flex;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+.color__first p{
+  border-bottom: none !important;
+  margin: 0;
+}
+.color__activ{
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+.color__unactiv{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.21);
+}
+.check__red{
+  display: flex;
+  width: 1.7rem;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+  background-color: red;
+  justify-content: center;
+}
+.check__black{
+  display: flex;
+  width: 1.7rem;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+  background-color: black;
+  justify-content: center;
+}
+.check__white{
+  display: flex;
+  width: 1.7rem !important;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+  background-color: white;
+  justify-content: center;
+}
+.color__activ p, .color__unactiv p{
+  width: 4rem;
+}
+.color__first img{
+  height: 2.5rem;
+  width: 1.5rem;
+  vertical-align: sub;
 }
