--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,11 @@
     font-family: Quicksand;
     src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
+
+@font-face {
+  font-family: Montserrat;
+  src: url(./Fonts/Montserrat-VariableFont_wght.ttf);
+}
 //
 
 html{
@@ -23,98 +28,467 @@ body{
     margin: 0;
     padding: 0;
 }
-.recommendation{
+
+.elem1__text > p, .description__square > p{
+    margin: 0;
+    padding: 0;
+}
+
+.main{
+    .main__bg{
+        width: 100vw;
+        background: url(./img/main/bg.png) 0 0/100% 100% no-repeat ;
+    }
+    .main__nav{
+        padding: 56px 100px 125px 100px;
+        display: flex;
+        justify-content: space-between;
+        .nav__elem1{
+            display: flex;
+            align-items: center;
+            .elem1__imgContainer{
+                display: inline-block;
+                height: 100%;
+                .elem1__img{
+                    width: 105%;
+                    height: 105%;
+                }
+            }
+            .elem1__text{
+                .elem1__text1{
+                    font-family: 'Quicksand';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.6rem;
+                    font-size: 2rem;
+                    line-height: 20px;
+                    color: #0897AB;
+                    padding-left: 10px;
+                    padding-top: 5px;
+                    text-transform: uppercase;
+                }
+                .elem1__text2{
+                    font-family: 'Quicksand';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.6rem;
+                    font-size: 2rem;
+                    line-height: 20px;
+                    color: #FFFFFF;
+                    padding-left: 34px;
+                    text-transform: uppercase;
+                }
+            }
+        }
+        .nav__elem2{
+            display: flex;
+            align-items: center;
+            gap: 53px;
+            .elem2__searchContainer{
+                background: rgba(40, 40, 52, 0.01);
+                border: 2px solid #0897AB;
+                box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.52);
+                border-radius: 23px;
+                border-radius: 75px;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                padding-right: 176px;
+                padding-right: 225px;
+                display: flex;
+                justify-content: flex-start;
+                background: url(./img/main/magnifier.svg) 29px 18px no-repeat;
+                .elem2__search{
+                    margin-left: 64px;
+                    font-family: 'Doppio One';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.6rem;
+                    line-height: 20px;
+                    color: rgba(255, 255, 255, 0.58);
+                }
+            }
+            .elem2__bin{
+                background: url(./img/main/bin.svg) no-repeat;
+                width: 47px;
+                height: 44px;
+                text-align: center;
+                position: relative;
+                .elem2__text{
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #FFFFFF;
+                    background-color: #0897AB;
+                    border-radius: 100%;
+                    width: 20px;
+                    height: 20px;
+                    position: absolute;
+                    top: 27px;
+                    left: 25px;
+                }
+            }
+        }
+    }
+    .main__description{
+        padding: 100px 67px 10% 200px;
+        margin: 0 680px 0 0;
+        padding-left: 10%;
+        position: relative;
+        z-index: 0;
+        bottom: 100px;
+        right: 30px;
+        .description__square{
+            .description__imgContainer{
+                position: absolute;
+                z-index: -1;
+                margin: -100px 0 0 -75px;
+                .description__img{
+                    width: 800px;
+                }
+            }
+            .description__buttonContainer{
+                display: inline-block;
+            }
+            .description__h1{
+                font-family: 'Doppio One';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 4.8rem;
+                line-height: 60px;
+                color: #FFFFFF;
+                width: 500px;
+            }
+            .description__text{
+                width: 650px;
+                font-family: 'Doppio One';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 2rem;
+                line-height: 157%;
+                letter-spacing: 0.07em;
+                color: #FFFFFF;
+                margin-bottom: 30px;
+            }
+            .description__text::first-letter{
+                padding-left: 15px;
+            }
+            .description__button{
+                font-family: 'Doppio One';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 2rem;
+                line-height: 25px;         
+                color: #FFFFFF;
+                padding: 20px 62px;
+                background: url(./img/main/Subtract.svg) 0 0/100% 100% no-repeat;
+            }
+            .description__link{
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+//Section 2 below
+
+.recommendation {
     margin: 0;
     position: relative;
+    background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+  }
+
+
+  .HU-1-3 {
     width: 100vw;
-    height: 100vw;
-    background: linear-gradient(112deg, rgba(26, 28, 75, 1) 16.68%, rgba(8, 151, 171, 1) 96.66%);
-}
-.HU-1-3{
-    width:100vw;
     height: auto;
     display: flex;
-&__leftpanel{
+  }
+  .HU-1-3__leftpanel {
     position: relative;
     width: 49vw;
-.leftpanel{
-&__img1{
-    width: 10rem;
+    width: 650px;
+    z-index: 0;
+  }
+  .HU-1-3__leftpanel .leftpanel__img1 {
+    width: 125px;
     position: absolute;
     left: 35%;
-    top: 30%;
-}
-&__img2{
-        width: 10rem;
-        position: absolute;
-        left: 50%;
-        top: 30%;
-}
-&__backimg{
-        left: 0rem;
-        top: 99.3rem;
-        width: 60rem;
-}
-}
-h1{
-    font-family: 'Dhurjati';
+    top: 20%;
+  }
+  .HU-1-3__leftpanel .leftpanel__img2 {
+    width: 125px;
     position: absolute;
-    left: 24.5%;
-    top: 6%;
+    left: 53.847%;
+    height: 403px;
+    top: 109px;
+  }
+  .HU-1-3__leftpanel .leftpanel__backimg {
+      position: absolute;
+      z-index: -1;
+      left: 1.5rem;
+      top:1rem;
+      width: 58rem;
+
+  }
+  .leftpanel__content{
+    left: 0;
+    top: 0%;
+    position: relative;
+    width: 65rem;
+    height: 65rem;
+}
+  .HU-1-3__leftpanel h1 {
+    font-family: 'Dhurjati',sans-serif;
+    position: absolute;
+    left: 27%;
+    top: 7.5%;
+    top: 1%;
+    left: 22%;
     color: white;
     font-size: 5.6rem;
+    font-size: 9.6rem;
+    font-weight: normal;
     line-height: 16rem;
     letter-spacing: 1.312rem;
     text-transform: uppercase;
     width: 20vw;
-}
-}
-&__rightpanel{
+  }
+  .HU-1-3__rightpanel {
     width: 50vw;
-    h2{ 
-        font-family: 'Doppio One';
-        width: 45vw;
-        font-size:4.2rem;
-        line-height: 6rem;
-        color: white;
-        margin-top: 15rem;
-    }
+  }
+  .HU-1-3__rightpanel h2 {
+
+      font-family: 'Doppio One', sans-serif;
+      font-size: 4.8rem;
+      font-weight: normal;
+      color: white;
+      font-weight: 400;
+      margin-top: 15rem;
+  }
+  .HU-1-3__rightpanel h3 {
+    font-family: "Doppio One";
+    font-size: 2.4rem;
+    font-size: 3.2rem;
+    line-height: 4rem;
+    color: white;
+    font-weight: normal;
+  }
+  .HU-1-3__rightpanel span {
+    font-family: "Doppio One";
+    color: #D8A4B6;
+    font-size: 3rem;
+    font-size: 3.2rem;
+  }
+  .HU-1-3__rightpanel p {
+    font-family: 'Doppio One';
+    font-size: 2rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.57);
+    width: 90%;
+  }
+  .HU-1-3 .rightpanel__link {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+  .HU-1-3 .rightpanel__link a {
+    font-family: 'Dhurjati';
+    font-weight: 400;
+    color: white;
+    font-size: 3.6rem;
+    line-height: 6.7rem;
+    display: inline-block;
+    margin: 0;
+    text-decoration: none;
+  }
+  .HU-1-3 .rightpanel__link hr {
+    width: 10rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }/*# sourceMappingURL=style.css.map */
+
+
+
+  .HU-1-2, .HU-1-4{
+    padding-top: 65px;
+  }
+  .HU-1-2__h2{
+    font-family: 'Doppio One', sans-serif;
+    font-size: 4.8rem;
+    color: white;
+    text-align: center;
+    margin: 0;
+    position: relative;
+    font-weight: 400;
+  }
+  .HU-1-2__product, .HU-1-4__product{
+    display: flex;
+    padding: 5%;
+  }
+  .product__info{
+    width: 50%;
+  }
+  .info__h2{
+    font-family: 'Doppio One', sans-serif;
+    font-size: 4.8rem;
+    color: white;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .info__starting{
+    color: white;
+    margin: 0;
+    margin-right: 10%;
+  }
+  .info__price{
+    color: #ddafbf;
+    margin: 0;
+  }
+  .info__prices{
+    display: flex;
+    font-family: 'Doppio One';
+    font-size: 3.2rem;
+    font-weight: 400;
+  }
+  .info__lorum{
+    font-family: 'Doppio One';
+    font-size: 20px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.57);
+    width: 90%;
+  }
+  .info__buy{
+    font-family: 'Dhurjati';
+    font-weight: 400;
+    color: white;
+    font-size: 3.6rem;
+    line-height: 6.7rem;
+    border-bottom: 1px solid white;
+    display: inline-block;
+    margin: 0;
+    text-decoration: none;
+  }
+  .product__img img{
+    width: 590px;
+  }
+
+  ///////////////Section 3 below
+  .shop__select>div{
+    border:0.5vw solid #3C3B4B;
+    border-radius: 0.5vw;
+    width: 40vw;
+    height: 25vw;
+    overflow: hidden;
+}
+.shop{
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: 'Doppio One';
+    font-weight: 400;
+    padding-bottom: 9vw;
     h3{
-        font-family: 'Doppio One';
-        font-size: 2.4rem;
-        line-height: 4rem;
-        color: white;
+        margin: 0 auto;
+        padding:3vw 0;
+        text-align: center;
+        color: #fff;
+        font-size: 3.5vw;
+        font-weight: 300;
     }
-    span{
-        font-family: 'Doppio One';
-        color: #D8A4B6;
-        font-size:3rem ;
+    &__mouse-price,&__pad-price,&__headphones-price,&__keyboard-price{
+        margin-top: 2vw;
+        width: fit-content;
+        margin-left: 3vw;
+        p{
+            margin-bottom: 0.5vw;
+            font-size: 1.2vw;
+            font-weight: normal;
+        }
+        span{
+            color: #0897AB;
+            font-size: 1.5vw ;
+        }
     }
-    p{
-        font-family: 'Doppio One';
-        width: 50vw;
-        color:rgba(255, 255, 255, 0.54);
-        font-size: 1.6rem;
-    }
-}
-    .rightpanel__link{
+    &__mouse-text,&__pad-text,&__headphones-text,&__keyboard-text{
+        font-family: 'Montserrat';
+        color:#2D2D39;
+        font-size: 9.5vw;
+        font-weight: 800;
+        text-transform: uppercase;
         position: relative;
-        display: flex;
-        flex-direction: column;
+        left: -5%;
+        margin-top: 2vw;
+    }
+    &__mouse-desc,&__pad-desc,&__headphones-desc,&__keyboard-desc{
+        font-size: 1.5vw;
+        position: relative;
+        left: 8%;
+        bottom: 50%;
+        font-weight: normal;
+    }
+    &__mouse-btn,&__keyboard-btn,&__pad-btn,&__headphones-btn{
+        position: sticky;
+        bottom: 5%;
+        left: 5%;
+        width: fit-content;
+        font-weight: normal;
         a{
-            font-family: 'Dhurjati';
-            font-size: 2.4rem;
-            line-height: 6.7rem,;
-            text-decoration:none;
-            color: white;  
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.5vw;
+            text-transform: uppercase;
+            text-align: center;
+            font-weight: normal;
         }
-        hr{
-        width: 10rem;
-        position: absolute;
-        left: 0;
-        bottom:0;
+        div{
+            background-color: #0897AB;
+            clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+            width: 16vw;
+            height: 4vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 100;
         }
     }
+    &__keyboard,&__pad{
+        margin-left:1.5vw;
+    }
+    &__mouse,&__headphones{
+        margin-right:1.5vw;
+    }
+    &__headphones,&__keyboard{
+        margin-top: 3.5vw;
+    }
+
+    img{
+        width: 16vw;
+        position: sticky;
+        left: 60%;
+        bottom: 60%;
+    }
+    &__mouse>img{
+        width: 23vw;
+        left: 45%;
+    }
+    &__headphones>img{
+        width: 19vw;
+        left: 54%;
+    }
+    &__pad>img{
+        width: 21vw;
+        left: 49%;
+    }
+    &__select{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+
 }
-
-
